# mypkg

./: .gitignore  pyproject.toml  requirements.txt
src/mypkg/: __init__.py  classifier.py  core.py  visualization.py
tests/: test_VAT_and_iVAT.py  test_simpleclassifiers_and_visualizations.py
