[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypkg"
version = "0.2.0"
description = "My utility functions"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Tri Nguyen", email = "nguye3hr@mail.uc.edu" }
]

dependencies = [
  "fuzzytree>=0.2.0,<0.3",
  "lightgbm>=4.0,<5",
  "matplotlib>=3.7,<4",
  "numba>=0.59,<1",
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "scikit-learn>=1.3,<2",   # NOTE: name is scikit-learn, not scikit_learn
  "seaborn>=0.13,<0.14",
  "shap>=0.45,<0.51",
  "xgboost>=2.0,<4"
]

[project.urls]
Homepage = "https://github.com/GrootVN/mypkg"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
